--- a/BizPass/Base.lproj/Main.storyboard
+++ b/BizPass/Base.lproj/Main.storyboard
@@ -58,10 +58,10 @@
                                 <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Github" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qMJ-P0-zHb">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qMJ-P0-zHb">
                                 <rect key="frame" x="439" y="354" width="145" height="30"/>
                                 <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="16"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Si-6C-cSh">
                                 <rect key="frame" x="240" y="20" width="120" height="120"/>
@@ -80,13 +80,14 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="emailField" destination="wrG-WO-T7B" id="LHa-ec-siJ"/>
-                        <outlet property="githubField" destination="qMJ-P0-zHb" id="aAr-7H-bcQ"/>
                         <outlet property="imageView" destination="1Si-6C-cSh" id="RnU-Ox-XAX"/>
                         <outlet property="linkedinField" destination="qP9-XF-Ts5" id="FnL-GE-mz3"/>
                         <outlet property="nameField" destination="K7i-vc-Ssl" id="yJB-Qk-9Nm"/>
+                        <outlet property="phoneNumberField" destination="qMJ-P0-zHb" id="FTs-if-11W"/>
                         <outlet property="resumeField" destination="oKx-G7-5UD" id="tg8-Vo-eFE"/>
                         <outlet property="titleField" destination="Jzn-aG-Kt0" id="Qb0-Ff-RQl"/>
                         <outlet property="twitterField" destination="zqh-mo-HVT" id="1Mi-KX-7xF"/>
+                        <outlet property="websiteField" destination="UC5-vL-OTG" id="phI-EW-FOR"/>
                         <outlet property="webstieField" destination="UC5-vL-OTG" id="sQK-L9-RtU"/>
                     </connections>
                 </viewController>
